2025-05-29 RU: Se agrega formato de impresión.

--- a/CódigoFuente/BitacorasProduccion/Views/RU_registros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RU_registros/Index.cshtml
@@ -311,6 +311,12 @@
                                                         <button onclick="details(@item.id)" class="btn btn-info btn-sm" title="Detalles" data-toggle="tooltip" data-placement="top">
                                                             <i class="fa-solid fa-circle-info"></i>
                                                         </button>
+                                                        <a href="@Url.Action("GenerarPDF", "RU_registros", new { id = item.id, inline = true })"
+                                                           target="_blank"
+                                                           class="btn btn-sm btn-secondary"
+                                                           title="Imprimir">
+                                                            <i class="fa fa-print"></i>
+                                                        </a>
                                                     </td>
                                                 </tr>
                                             }
